--- a/data/mp_article.yaml
+++ b/data/mp_article.yaml
@@ -1,4 +1,4 @@
 mp_article001:
-  title: bj-test17-004
-  content: 今天晚上炖火锅！
+  title: 佩奇日记04
+  content: 我弟弟乔治今天又和我抢泥坑跳了，我不给他他就搁地上打滚！
   expect: 新增文章成功
