--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = -s --alluredir report
 testpaths = ./scripts
-python_files = test*.py
+python_files = test006_app_article.py
 python_classes = Test*
 python_functions = test*
